[tool.poetry]
name = "xchk_mysql_comparison_strategies"
version = "0.0.1"
description = "Checks and strategies for comparing MySQL databases"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
xchk-core = {url = "http://github.com/v-nys/xchk_core/tarball/develop"}
django-allauth = "^0.40.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
